2019-07-12  rich  <rich@r>

        * modules/gdrive.py: cc93babd2398e175fbdb681854e7fafa015f749b 
        Added -V/-verify option to confirm whether data and metadata are correct using
        previously saved metadata on disk.
        
2019-07-11  rich  <rich@r>

        * modules/gdrive.py: 8f8180939c8bce06c054a5ddadc28925eb507aac
        Add jsonpath expression syntax for seleting metadata.
        
        Specifying a CSV column, 'owners[*].emailAddress', produces a list of user
        names: ['john.doe@gmail.com']
        
        Extend csv_column to allow named column sets.
        Exten csv_column syntax to specify field width for standard output table.
        This column set is selected by the option -col owners.
        
          csv_columns:
            owners:
            - [status, 7]
            - ['owners[*].emailAddress', 20]
            - [fullpath, 66]
        
        
2019-07-10  rich  <rich@r>

        * README.md, gdrive.py: verified accuracy of preservation of last access and
        last modify times in the file system.  Revised gdrive.py to use exact match for
        comparing FS to GD values.

        Added verification of Last Access time stamp, and discssion of it in README.
        
        Refactored comparison of local file attribtes with Google Drive metadata.
        
2019-07-09  rich  <rich@r>

        * googleapiclient librariy handles retries, so we don't need a loop for
        IncompleteReqest exception. Use '-log DEBUG' to view the repeated requests.
        use 'log_to_stdout: True' in config.yml to view them on stadnard output.

        * Google Drive folders can hold duplicate file names that are differentiated by
        their version number.  In order to save them as uniqe files on Unix and Windows
        file systems we append (version) to the filename.
        For example: ./My Drive/Untitled document(12).pdf

        Versions are not revisions. Each version can have multiple revisions.  
        