@@ -1,3 +1,9 @@
+2019-07-13  rich  <rich@r>
+
+        * modules/gdrive.py: da735025d9aacae89e70067b4cc57edf99cdc351
+        refactor walk_gdrive and walk_local_metadata, so that they are call a handler to
+        process file items.  In principle, this will allow plug-in of other operations.
+
 2019-07-12  rich  <rich@r>
 
         * modules/gdrive.py: cc93babd2398e175fbdb681854e7fafa015f749b 
